syntax = "proto3";

package pinax.cosmos.v1;

import "google/protobuf/timestamp.proto";

message Events {
  repeated Block blocks = 1;
  repeated Transaction transactions = 2;
  repeated TransactionEvent transaction_events = 3;
  repeated BlockEvent block_events = 4;
  repeated Misbehavior misbehaviors = 5;
  repeated ValidatorUpdate validator_updates = 6;
  repeated ConsensusParamUpdate consensus_param_updates = 7;
  repeated TransactionMessage transaction_messages = 8;
}

message Block {
  string time = 1; // TIMESTAMP
  uint64 number = 2;
  string date = 3;
  string hash = 4;
  uint64 version_consensus_block = 5;
  uint64 version_consensus_app = 6;
  string chain_id = 7;
  string last_block_id = 8;
  string last_commit_hash = 9;
  string data_hash = 10;
  string validators_hash = 11;
  string next_validators_hash = 12;
  string consensus_hash = 13;
  string app_hash = 14;
  string last_results_hash = 15;
  string evidence_hash = 16;
  string proposer_address = 17;
  uint64 total_transactions = 18;
  uint64 successful_transactions = 19;
  uint64 failed_transactions = 20;
}

message Transaction {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  uint32 index = 5;
  string hash = 6;
  uint32 code = 7;
  string data = 8;
  string log = 9;
  string info = 10;
  int64 gas_wanted = 11;
  int64 gas_used = 12;
  string codespace = 13;
}

message TransactionEvent {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  string tx_hash = 5;
  uint32 index = 6;
  string type = 7;
  // Should be Array(Tuple(Text, Text)) when supported by sink-files
  repeated string attributes = 8;
}

message BlockEvent {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  uint32 index = 5;
  string type = 6;
  // Should be Array(Tuple(Text, Text)) when supported by sink-files
  repeated string attributes = 7;
}


message Misbehavior {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  uint32 index = 5;
  string type = 6;
  string validator_address = 7;
  int64 validator_power = 8;
  int64 height = 9;
  google.protobuf.Timestamp time = 10;
  int64 total_voting_power = 11;
}

message ValidatorUpdate {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  uint32 index = 5;
  string public_key = 6;
  int64 power = 7;
}

message ConsensusParamUpdate {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  optional int64 block_max_bytes = 5;
  optional int64 block_max_gas = 6;
  optional int64 evidence_max_age_num_blocks = 7;
  optional string evidence_max_age_duration = 8;
  optional int64 evidence_max_bytes = 9;
  repeated string validator_pub_key_types = 10;
  optional uint64 app_version = 11;
}

message TransactionMessage {
  string block_time = 1; // TIMESTAMP
  uint64 block_number = 2;
  string block_date = 3;
  string block_hash = 4;
  string tx_hash = 5;
  uint32 index = 6;
  string type = 7;
  // raw hex value of the message
  string value = 8;
}

